[package]
name = "peter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.21" , features = ["cargo"]}
serde_json = "1.0"
serde = { version = "1.0.144", features = ["derive"]}
touch = "0.0.1"
