[package]
name = "saint-peter"
version = "1.0.0"
edition = "2021"
description = "git ssh keys store and manager"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.21" , features = ["cargo"]}
serde_json = "1.0"
serde = { version = "1.0.144", features = ["derive"]}
osshkeys = "0.6.2"
enum-display-derive = "0.1.1"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
